--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Add a relevant page title</title>
+    <title>Ayman Elsayeed | Python Developer</title>
   </head>
   <body>
     <!-- //  INTRO  // -->
     <header>
       <!-- Start content edits below this line. -->
-      <h1>Your Name</h1>
-      <h2>Job title or tagline</h2>
+      <h1>Ayman Elsayeed</h1>
+      <h2>Python Developer</h2>
 
       <!-- End content edits here. -->
     </header>
