--- a/resume.html
+++ b/resume.html
@@ -52,22 +52,68 @@
         <h2>Work Experience</h2>
         <p>Optional paragraph for work experience summary. Not a part of the job details. Delete if not being used.</p>
 
+        <section>
+          <h3>Volunteering, NLP and ML Coach</h3>
+          <p>DataHack</p>
+          <p>2024</p>
+          <p> As an NLP and ML Teaching Coach,I support students in understanding and practicing key concepts of NLP and ML.</p>
+          <p> I’m responsibilities include:</p>
+          <ul>
+            <li>Supporting Lecture Content: Assist students with lecture topics ranging from introductory concepts to advanced topics like neural networks.</li>
+            <li>Providing Practical Guidance: Distribute and explain code examples and Jupyter notebooks to help students apply their knowledge.</li>
+            <li>Facilitating Learning Sessions: Guide students through exercises.</li>
+          </ul>
+        </section>
+
         <!-- To add more items, copy this whole <section></section> block -->
         <section>
-          <h3>Job title</h3>
-          <p>Company Name</p>
-          <p>Date at job</p>
+          <h3>Python Developer</h3>
+          <p>MDClone</p>
+          <p>2019-2024</p>
           <p>Job summary goes here. Add as many paragraphs as you need.</p>
           <p>Optional list:</p>
           <ul>
-            <li>Delete this list if you don't need it.</li>
-            <li>Created...</li>
-            <li>Lead...</li>
-            <li>Responsible for...</li>
+            <li>Led the design and implementation of an architecture of performance-critical algorithms as a micro-service using REST API  and messaging framework in collaboration with the QA team and the PM.
+            </li>
+            <li>Iteratively updated the algorithm design through multiple iterations, significantly improving performance metrics.
+            </li>
+            <li>Conducted thorough testing of the algorithm, collaborating with QA to ensure reliability and accuracy.
+            </li>
+            <li>Conducted a detailed comparison of various approaches, selecting the most suitable method that met the project's performance requirements.
+            </li>
+            <li>Established an automation infrastructure as micro-service, enabling the QA team to write tests once and execute them with different inputs, generating reports nightly.
+            </li>
+            <li>Impact, Saved significant QA time, enhanced the development life cycle, and facilitated quicker</li>
           </ul>
         </section>
 
         <!-- End content edits here. -->
+
+        <section>
+          <h3>Technology Research Sr Analyst</h3>
+          <p>Accenture</p>
+          <p>2017-2019</p>
+          <p>Job summary goes here. Add as many paragraphs as you need.</p>
+          <p>Optional list:</p>
+          <ul>
+            <li>Build and train NER (Named Entity Recognition) module for PII.</li>
+            <li>Successfully acquired expertise in Natural Language Processing (NLP) through a dual approach comprehensive theoretical understanding and hands-on practical application.</li>
+            <li>Applied acquired knowledge to train a successful Named Entity Recognition (NER) module, showcasing practical implementation skills.</li>
+          </ul>
+        </section>
+
+        <section>
+          <h3>System Network Admin</h3>
+          <p>CheckPoint</p>
+          <p>2016-2017</p>
+          <p>Job summary goes here. Add as many paragraphs as you need.</p>
+          <p>Optional list:</p>
+          <ul>
+            <li>NOC,Monitor System and network events.</li>
+            <li>SOC,Monitor and manage security events, Threat Prevention Investigation.</li>
+          </ul>
+        </section>
+
       </section>
 
       <!-- //  EDUCATION & CERTIFICATIONS  // -->
@@ -77,12 +123,30 @@
 
         <!-- To add more items, copy this whole <section></section> block -->
         <section>
-          <h3>School name - City</h3>
-          <p>Designation received or program name, year attended</p>
-          <p>Summary or accomplishments.</p>
+          <h3>SCE</h3>
+          <p>M.SC</p>
+          <p>Master of Software Engineering.</p>
         </section>
 
         <!-- End content edits here. -->
+
+        <section>
+          <h3>SCE</h3>
+          <p>B.SC</p>
+          <p>Software Engineering.</p>
+        </section>
+
+        <section>
+          <h3>BGU</h3>
+          <p>Diploma of education</p>
+          <p>Teacher</p>
+        </section>
+
+        <section>
+          <h3>HackerU</h3>
+          <p>MCSA, CCNA, LPIC</p>
+          <p>System Network Administration</p>
+        </section>
       </section>
     </main>
 
