--- a/resume.html
+++ b/resume.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Resume | Ayman Elsayeed | Python Developer</title>
+    <link rel="stylesheet" href="css/style.css">
   </head>
-  <body>
+  <body class="resume">
     <!-- //  INTRO  // -->
     <header>
       <!-- Start content edits below this line. -->
       <h1>Ayman Elsayeed</h1>
       <h2>Python Developer</h2>
-
       <!-- End content edits here. -->
     </header>
 
@@ -34,7 +34,7 @@
 
         <!-- To add more items, copy this whole <section></section> block-->
         <section>
-          <img src="" srcset="" alt="description of image" width="" height="">
+          <img src="placeholder-images/project-biz-cards-500px.jpg" srcset="placeholder-images/project-biz-cards-1000px.jpg 2x" alt="description of image" width="" height="">
           <h3>Project Name</h3>
           <p>Summary or description of the project and/or your role in it. Add as many paragraphs as you need.</p>
           <!-- link to project -->
@@ -153,24 +153,12 @@
     <!-- //  FOOTER INFO, SOCIAL MEDIA  // -->
     <footer>
       <!-- Start content edits below this line. -->
-      <p>© 2023 by Your Name | <a href="mailto:email@example.com">email@example.com</a></p>
+      <p>© 2024 Ayman Elsayeed | <a href="mailto:aymanElsayeed@gmail.com">Ayman</a></p>
 
       <!-- Add or remove any networks. -->
       <ul>
         <li>
-          <a href="#" target="_blank">Twitter</a>
-        </li>
-        <li>
-          <a href="#" target="_blank">LinkedIn</a>
-        </li>
-        <li>
-          <a href="#" target="_blank">Facebook</a>
-        </li>
-        <li>
-          <a href="#" target="_blank">YouTube</a>
-        </li>
-        <li>
-          <a href="#" target="_blank">Instagram</a>
+          <a href="https://www.linkedin.com/in/aymanel/" target="https://www.linkedin.com/in/aymanel/"><img src="placeholder-images/icon-logo-linkedin.png" alt=""></a>
         </li>
       </ul>
       
