--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 <!-- //  FOOTER INFO, SOCIAL MEDIA  // -->
 <footer>
     <!-- Start content edits below this line. -->
-    <p>© 2023 by Your Name | <a href="mailto:email@example.com">email@example.com</a></p>
+    <p>© 2024 Ayman Elsayeed | <a href="mailto:aymanElsayeed@gmail.com">aymanElsayeed@gmail.com</a></p>
 
     <!-- Add or remove any networks. -->
     <ul>
