--- a/index.html
+++ b/index.html
@@ -37,12 +37,12 @@
     <p>© 2024 Ayman Elsayeed | <a href="mailto:aymanElsayeed@gmail.com">aymanElsayeed@gmail.com</a></p>
 
     <!-- Add or remove any networks. -->
-    <ul>
+    <ul class="socials">
         <li>
-            <a href="https://github.com/AymanElsayeed" target="_blank">GitHub</a>
+            <a href="https://github.com/AymanElsayeed" target="_blank"><img src="placeholder-images/icon-github.png" alt=""></a>
         </li>
         <li>
-            <a href="https://www.linkedin.com/in/aymanel/" target="_blank">LinkedIn</a>
+            <a href="https://www.linkedin.com/in/aymanel/" target="https://www.linkedin.com/in/aymanel/"><img src="placeholder-images/icon-logo-linkedin.png" alt=""></a>
         </li>
     </ul>
     <!-- End content edits here. -->
