--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     <!-- Add or remove any networks. -->
     <ul class="socials">
         <li>
-            <a href="https://github.com/AymanElsayeed" target="_blank"><img src="placeholder-images/icon-github.png" alt=""></a>
+            <a href="https://github.com/AymanElsayeed" target="_blank"><img src="images/icon-github.png" alt=""></a>
         </li>
         <li>
             <a href="https://www.linkedin.com/in/aymanel/" target="https://www.linkedin.com/in/aymanel/"><img src="placeholder-images/icon-logo-linkedin.png" alt=""></a>
