--- a/resume.html
+++ b/resume.html
@@ -38,9 +38,9 @@
           <h3>Project Name</h3>
           <p>Summary or description of the project and/or your role in it. Add as many paragraphs as you need.</p>
           <!-- link to project -->
-          <a href="#" target="_blank">Link</a>
+          <a class="btn" href="#" target="_blank">Link</a>
           <!-- additional links, e.g. newsletter -->
-          <a href="#" target="_blank">Another link</a>
+          <a class="btn" href="#" target="_blank">Another link</a>
         </section>
         
         <!-- End content edits here. -->
@@ -156,9 +156,12 @@
       <p>© 2024 Ayman Elsayeed | <a href="mailto:aymanElsayeed@gmail.com">Ayman</a></p>
 
       <!-- Add or remove any networks. -->
-      <ul>
+      <ul class="socials">
         <li>
-          <a href="https://www.linkedin.com/in/aymanel/" target="https://www.linkedin.com/in/aymanel/"><img src="placeholder-images/icon-logo-linkedin.png" alt=""></a>
+          <a href="https://github.com/AymanElsayeed" target="_blank"><img src="images/icon-github.png" alt=""></a>
+        </li>
+        <li>
+          <a href="https://www.linkedin.com/in/aymanel/" target="https://www.linkedin.com/in/aymanel/"><img src="images/icon-logo-linkedin.png" alt=""></a>
         </li>
       </ul>
       
