--- a/resume.html
+++ b/resume.html
@@ -10,12 +10,14 @@
     <!-- //  INTRO  // -->
     <header>
       <!-- Start content edits below this line. -->
+      <div class="content-wrapper">
       <h1>Ayman Elsayeed</h1>
       <h2>Python Developer</h2>
+      </div>
       <!-- End content edits here. -->
     </header>
 
-    <main>
+    <main class="content-wrapper">
       <!-- //  PROFILE  // -->
       <section>
         <!-- Start content edits below this line. -->
