--- a/resume.html
+++ b/resume.html
@@ -19,7 +19,7 @@
 
     <main class="content-wrapper">
       <!-- //  PROFILE  // -->
-      <section>
+      <section class="resume-section">
         <!-- Start content edits below this line. -->
         <h2>Profile</h2>
         <p>Add your resume summary/profile here. Add more paragraphs or links as needed.</p>
@@ -29,14 +29,35 @@
       </section>
 
       <!-- //  PROJECTS  // -->
-      <section>
+      <section class="resume-section">
         <!-- Start content edits below this line. -->
         <h2>Projects</h2>
         <p>Optional paragraph for the Projects summary. Delete if not being used.</p>
 
         <!-- To add more items, copy this whole <section></section> block-->
-        <section>
-          <img src="placeholder-images/project-biz-cards-500px.jpg" srcset="placeholder-images/project-biz-cards-1000px.jpg 2x" alt="description of image" width="" height="">
+        <section class="project-item">
+          <img src="images/project-biz-cards-500px.jpg" srcset="placeholder-images/project-biz-cards-1000px.jpg 2x" alt="description of image" width="" height="">
+          <h3>Project Name</h3>
+          <p>Summary or description of the project and/or your role in it. Add as many paragraphs as you need.</p>
+          <!-- link to project -->
+          <a class="btn" href="#" target="_blank">Link</a>
+          <!-- additional links, e.g. newsletter -->
+          <a class="btn" href="#" target="_blank">Another link</a>
+        </section>
+
+        <section class="project-item">
+          <img src="images/project-biz-cards-500px.jpg" srcset="placeholder-images/project-biz-cards-1000px.jpg 2x" alt="description of image" width="" height="">
+          <h3>Project Name</h3>
+          <p>Summary or description of the project and/or your role in it. Add as many paragraphs as you need.</p>
+          <!-- link to project -->
+          <a class="btn" href="#" target="_blank">Link</a>
+          <!-- additional links, e.g. newsletter -->
+          <a class="btn" href="#" target="_blank">Another link</a>
+        </section>
+
+
+        <section class="project-item">
+          <img src="images/project-biz-cards-500px.jpg" srcset="placeholder-images/project-biz-cards-1000px.jpg 2x" alt="description of image" width="" height="">
           <h3>Project Name</h3>
           <p>Summary or description of the project and/or your role in it. Add as many paragraphs as you need.</p>
           <!-- link to project -->
@@ -49,7 +70,7 @@
       </section>
 
       <!-- //  WORK EXPERIENCE  // -->
-      <section>
+      <section class="resume-section">
         <!-- Start content edits below this line.  -->
         <h2>Work Experience</h2>
         <p>Optional paragraph for work experience summary. Not a part of the job details. Delete if not being used.</p>
@@ -116,10 +137,10 @@
           </ul>
         </section>
 
-      </section>
+      </section >
 
       <!-- //  EDUCATION & CERTIFICATIONS  // -->
-      <section>
+      <section class="resume-section">
         <!-- Start content edits below this line.  -->
         <h2>Education</h2>
 
