add download btn.

--- a/resume.html
+++ b/resume.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="css/style.css">
   </head>
   <body class="resume">
+  <a class="bt download-link" href="#"> Download PDF</a>
     <!-- //  INTRO  // -->
     <header>
       <!-- Start content edits below this line. -->
