--- a/index.html
+++ b/index.html
@@ -1,51 +1,56 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Ayman Elsayeed | Python Developer</title>
-    <link rel="stylesheet" href="css/style.css">
-</head>
-<body class="home">
-<!-- //  INTRO  // -->
-<div class="content-wrapper">
-    <header>
-        <!-- Start content edits below this line. -->
-        <h1>Ayman Elsayeed</h1>
-        <h2>Python Developer</h2>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <title>Ayman Elsayeed | Python Developer</title>
+        <link rel="stylesheet" href="css/style.css">
+    </head>
+    <body class="home">
+        <!-- //  INTRO  // -->
+        <div class="content-wrapper">
+            <header>
+                <!-- Start content edits below this line. -->
+                <h1>Ayman Elsayeed</h1>
+                <h2>Python Developer</h2>
 
-        <!-- End content edits here. -->
-    </header>
+                <!-- End content edits here. -->
+            </header>
 
-    <!-- //  ABOUT ME  // -->
-    <main>
-        <!-- Start content edits below this line. -->
-        <p>Add your "about me" summary here. Add more paragraphs or links as needed. Here is some dummy text: Lorem
-            ipsum dolor sit amet, consectetur adipiscing elit. Praesent bibendum, diam ut gravida efficitur, risus neque
-            scelerisque erat, ut rhoncus erat odio ac justo. Nunc scelerisque vestibulum augue, sit amet hendrerit
-            ante.</p>
-        <p>To learn more about my work history, check out my <a href="resume.html"> resume</a>. Thanks for stopping by!
-        </p>
+            <!-- //  ABOUT ME  // -->
+            <main>
+                <!-- Start content edits below this line. -->
+                <p>Add your "about me" summary here. Add more paragraphs or links as needed. Here is some dummy text:
+                    Lorem
+                    ipsum dolor sit amet, consectetur adipiscing elit. Praesent bibendum, diam ut gravida efficitur,
+                    risus neque
+                    scelerisque erat, ut rhoncus erat odio ac justo. Nunc scelerisque vestibulum augue, sit amet
+                    hendrerit
+                    ante.</p>
+                <p>To learn more about my work history, check out my <a href="resume.html"> resume</a>. Thanks for
+                    stopping by!
+                </p>
 
-        <!-- End content edits here. -->
-    </main>
-</div>
+                <!-- End content edits here. -->
+            </main>
+        </div>
 
-<!-- //  FOOTER INFO, SOCIAL MEDIA  // -->
-<footer>
-    <!-- Start content edits below this line. -->
-    <p>© 2024 Ayman Elsayeed | <a href="mailto:aymanElsayeed@gmail.com">aymanElsayeed@gmail.com</a></p>
+        <!-- //  FOOTER INFO, SOCIAL MEDIA  // -->
+        <footer>
+            <!-- Start content edits below this line. -->
+            <p>© 2024 Ayman Elsayeed | <a href="mailto:aymanElsayeed@gmail.com">aymanElsayeed@gmail.com</a></p>
 
-    <!-- Add or remove any networks. -->
-    <ul class="socials">
-        <li>
-            <a href="https://github.com/AymanElsayeed" target="_blank"><img src="images/icon-github.png" alt=""></a>
-        </li>
-        <li>
-            <a href="https://www.linkedin.com/in/aymanel/" target="https://www.linkedin.com/in/aymanel/"><img src="images/icon-logo-linkedin.png" alt=""></a>
-        </li>
-    </ul>
-    <!-- End content edits here. -->
-</footer>
-</body>
+            <!-- Add or remove any networks. -->
+            <ul class="socials">
+                <li>
+                    <a href="https://github.com/AymanElsayeed" target="_blank"><img src="images/icon-github.png" alt=""></a>
+                </li>
+                <li>
+                    <a href="https://www.linkedin.com/in/aymanel/" target="https://www.linkedin.com/in/aymanel/"><img
+                            src="images/icon-logo-linkedin.png" alt=""></a>
+                </li>
+            </ul>
+            <!-- End content edits here. -->
+        </footer>
+    </body>
 </html>
