add class work-experience-section.

--- a/resume.html
+++ b/resume.html
@@ -76,7 +76,7 @@
         <h2>Work Experience</h2>
         <p>Optional paragraph for work experience summary. Not a part of the job details. Delete if not being used.</p>
 
-        <section>
+        <section class="work-experience-section">
           <h3>Volunteering, NLP and ML Coach</h3>
           <p>DataHack</p>
           <p>2024</p>
@@ -90,7 +90,7 @@
         </section>
 
         <!-- To add more items, copy this whole <section></section> block -->
-        <section>
+        <section class="work-experience-section">
           <h3>Python Developer</h3>
           <p>MDClone</p>
           <p>2019-2024</p>
@@ -113,7 +113,7 @@
 
         <!-- End content edits here. -->
 
-        <section>
+        <section class="work-experience-section">
           <h3>Technology Research Sr Analyst</h3>
           <p>Accenture</p>
           <p>2017-2019</p>
@@ -126,7 +126,7 @@
           </ul>
         </section>
 
-        <section>
+        <section class="work-experience-section">
           <h3>System Network Admin</h3>
           <p>CheckPoint</p>
           <p>2016-2017</p>
