add todo ideas.

--- a/resume.html
+++ b/resume.html
@@ -193,3 +193,12 @@
     </footer>
   </body>
 </html>
+
+<!--
+TODO: idea, for each concept like(NLP), add a link to a project that you have done in this concept or example of your work.
+TODO: idea, for each job, add a link to a project that you have done in this job or example of your work.
+TODO: idea, remove the project section and add a link to the project in the work experience section.
+TODO: idea, add skill section, and add a link to the project that you have done in this skill.
+TODO: idea, to each skill add links to certifications that you have in this skill.
+-
+// -->
