add class education-section.

--- a/resume.html
+++ b/resume.html
@@ -146,7 +146,7 @@
         <h2>Education</h2>
 
         <!-- To add more items, copy this whole <section></section> block -->
-        <section>
+        <section class="education-section">
           <h3>SCE</h3>
           <p>M.SC</p>
           <p>Master of Software Engineering.</p>
@@ -154,19 +154,19 @@
 
         <!-- End content edits here. -->
 
-        <section>
+        <section class="education-section">
           <h3>SCE</h3>
           <p>B.SC</p>
           <p>Software Engineering.</p>
         </section>
 
-        <section>
+        <section class="education-section">
           <h3>BGU</h3>
           <p>Diploma of education</p>
           <p>Teacher</p>
         </section>
 
-        <section>
+        <section class="education-section">
           <h3>HackerU</h3>
           <p>MCSA, CCNA, LPIC</p>
           <p>System Network Administration</p>
