--- a/resume.html
+++ b/resume.html
@@ -30,51 +30,51 @@
             </section>
 
             <!-- //  PROJECTS  // -->
-            <section class="resume-section">
-                <!-- Start content edits below this line. -->
-                <h2>Projects</h2>
-                <p>Optional paragraph for the Projects summary. Delete if not being used.</p>
+<!--            <section class="resume-section">-->
+<!--                &lt;!&ndash; Start content edits below this line. &ndash;&gt;-->
+<!--                <h2>Projects</h2>-->
+<!--                <p>Optional paragraph for the Projects summary. Delete if not being used.</p>-->
 
-                <!-- To add more items, copy this whole <section></section> block-->
-                <section class="project-item">
-                    <img src="images/project-biz-cards-500px.jpg" srcset="images/project-biz-cards-500px.jpg 2x"
-                         alt="description of image" width="" height="">
-                    <h3>Project Name</h3>
-                    <p>Summary or description of the project and/or your role in it. Add as many paragraphs as you
-                        need.</p>
-                    <!-- link to project -->
-                    <a class="btn" href="#" target="_blank">Link</a>
-                    <!-- additional links, e.g. newsletter -->
-                    <a class="btn" href="#" target="_blank">Another link</a>
-                </section>
+<!--                &lt;!&ndash; To add more items, copy this whole <section></section> block&ndash;&gt;-->
+<!--                <section class="project-item">-->
+<!--                    <img src="images/project-biz-cards-500px.jpg" srcset="images/project-biz-cards-500px.jpg 2x"-->
+<!--                         alt="description of image" width="" height="">-->
+<!--                    <h3>Project Name</h3>-->
+<!--                    <p>Summary or description of the project and/or your role in it. Add as many paragraphs as you-->
+<!--                        need.</p>-->
+<!--                    &lt;!&ndash; link to project &ndash;&gt;-->
+<!--                    <a class="btn" href="#" target="_blank">Link</a>-->
+<!--                    &lt;!&ndash; additional links, e.g. newsletter &ndash;&gt;-->
+<!--                    <a class="btn" href="#" target="_blank">Another link</a>-->
+<!--                </section>-->
 
-                <section class="project-item">
-                    <img src="images/project-biz-cards-500px.jpg" srcset="images/project-biz-cards-500px.jpg 2x"
-                         alt="description of image" width="" height="">
-                    <h3>Project Name</h3>
-                    <p>Summary or description of the project and/or your role in it. Add as many paragraphs as you
-                        need.</p>
-                    <!-- link to project -->
-                    <a class="btn" href="#" target="_blank">Link</a>
-                    <!-- additional links, e.g. newsletter -->
-                    <a class="btn" href="#" target="_blank">Another link</a>
-                </section>
+<!--                <section class="project-item">-->
+<!--                    <img src="images/project-biz-cards-500px.jpg" srcset="images/project-biz-cards-500px.jpg 2x"-->
+<!--                         alt="description of image" width="" height="">-->
+<!--                    <h3>Project Name</h3>-->
+<!--                    <p>Summary or description of the project and/or your role in it. Add as many paragraphs as you-->
+<!--                        need.</p>-->
+<!--                    &lt;!&ndash; link to project &ndash;&gt;-->
+<!--                    <a class="btn" href="#" target="_blank">Link</a>-->
+<!--                    &lt;!&ndash; additional links, e.g. newsletter &ndash;&gt;-->
+<!--                    <a class="btn" href="#" target="_blank">Another link</a>-->
+<!--                </section>-->
 
 
-                <section class="project-item">
-                    <img src="images/project-biz-cards-500px.jpg" srcset="images/project-biz-cards-500px.jpg 2x"
-                         alt="description of image" width="" height="">
-                    <h3>Project Name</h3>
-                    <p>Summary or description of the project and/or your role in it. Add as many paragraphs as you
-                        need.</p>
-                    <!-- link to project -->
-                    <a class="btn" href="#" target="_blank">Link</a>
-                    <!-- additional links, e.g. newsletter -->
-                    <a class="btn" href="#" target="_blank">Another link</a>
-                </section>
+<!--                <section class="project-item">-->
+<!--                    <img src="images/project-biz-cards-500px.jpg" srcset="images/project-biz-cards-500px.jpg 2x"-->
+<!--                         alt="description of image" width="" height="">-->
+<!--                    <h3>Project Name</h3>-->
+<!--                    <p>Summary or description of the project and/or your role in it. Add as many paragraphs as you-->
+<!--                        need.</p>-->
+<!--                    &lt;!&ndash; link to project &ndash;&gt;-->
+<!--                    <a class="btn" href="#" target="_blank">Link</a>-->
+<!--                    &lt;!&ndash; additional links, e.g. newsletter &ndash;&gt;-->
+<!--                    <a class="btn" href="#" target="_blank">Another link</a>-->
+<!--                </section>-->
 
-                <!-- End content edits here. -->
-            </section>
+<!--                &lt;!&ndash; End content edits here. &ndash;&gt;-->
+<!--            </section>-->
 
             <!-- //  WORK EXPERIENCE  // -->
             <section class="resume-section">
