--- a/resume.html
+++ b/resume.html
@@ -10,7 +10,7 @@
         <link rel="stylesheet" href="css/style.css">
     </head>
     <body class="resume">
-        <a class="bt download-link" href="#"> Download PDF</a>
+        <a class="btn download-link" href="#"> Download PDF</a>
         <!-- //  INTRO  // -->
         <header>
             <!-- Start content edits below this line. -->
