--- a/resume.html
+++ b/resume.html
@@ -220,7 +220,7 @@
         <!-- //  FOOTER INFO, SOCIAL MEDIA  // -->
         <footer>
             <!-- Start content edits below this line. -->
-            <p>© 2024 Ayman Elsayeed | <a href="mailto:aymanElsayeed@gmail.com">Ayman</a></p>
+            <p>© 2024 Ayman Elsayeed | <a href="mailto:aymanElsayeed@gmail.com">AymanElsayeed@gmail.com</a></p>
 
             <!-- Add or remove any networks. -->
             <ul class="socials">
