--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         <!-- //  FOOTER INFO, SOCIAL MEDIA  // -->
         <footer>
             <!-- Start content edits below this line. -->
-            <p>© 2024 Ayman Elsayeed | <a href="mailto:aymanElsayeed@gmail.com">aymanElsayeed@gmail.com</a></p>
+            <p>© 2024 Ayman Elsayeed | <a href="mailto:aymanElsayeed@gmail.com">AymanElsayeed@gmail.com</a></p>
 
             <!-- Add or remove any networks. -->
             <ul class="socials">
