update about me text.

--- a/index.html
+++ b/index.html
@@ -24,14 +24,32 @@
                 <!-- //  ABOUT ME  // -->
                 <main>
                     <!-- Start content edits below this line. -->
-                    <p>Add your "about me" summary here. Add more paragraphs or links as needed. Here is some dummy
-                        text:
-                        Lorem
-                        ipsum dolor sit amet, consectetur adipiscing elit. Praesent bibendum, diam ut gravida efficitur,
-                        risus neque
-                        scelerisque erat, ut rhoncus erat odio ac justo. Nunc scelerisque vestibulum augue, sit amet
-                        hendrerit
-                        ante.</p>
+                    <p>
+                        I have a strong background in software engineering and systems management, where I’ve
+                        consistently focused on driving innovation and operational efficiency. Throughout my career,
+                        I’ve had the opportunity to design and implement solutions for performance-critical
+                        environments, often working collaboratively with cross-functional teams to meet demanding
+                        operational metrics. My approach is iterative, ensuring that every project I’m involved in goes
+                        through continuous refinement to optimize both reliability and performance.
+
+                        My passion for research has led me to delve deeply into fields like Natural Language Processing
+                        (NLP) and information security. I’ve worked extensively on training models for data processing,
+                        especially in addressing challenges related to sensitive information. This combination of
+                        practical experience and analytical thinking has enabled me to tackle complex technical problems
+                        effectively.
+
+                        I hold a Bachelor’s degree in Software Engineering and have additional certifications in systems
+                        administration, which have given me a solid grounding in networking and security monitoring. My
+                        career began in system and security roles, where I honed my skills in threat prevention and
+                        monitoring network events, experiences that continue to influence my approach to problem-solving
+                        today.
+
+                        Beyond my professional roles, I’m passionate about mentoring and coaching. I volunteer as a
+                        coach for students in Natural Language Processing and Machine Learning, helping them navigate
+                        both theoretical and practical aspects of these fields. I take pride in guiding students through
+                        challenges and sharing the insights I’ve gained throughout my career, which I believe is just as
+                        rewarding as the technical work itself.
+                    </p>
                     <p>To learn more about my work history, check out my <a href="resume.html"> resume</a>. Thanks for
                         stopping by!
                     </p>
