--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
                 <header>
                     <!-- Start content edits below this line. -->
                     <h1>Ayman Elsayeed</h1>
-                    <h2>Python Developer</h2>
+                    <h2>Python Developer| Technology Professional | Educator</h2>
 
                     <!-- End content edits here. -->
                 </header>
