add skills section.

--- a/resume.html
+++ b/resume.html
@@ -168,6 +168,53 @@
                     <p>System Network Administration</p>
                 </section>
             </section>
+
+            <!-- //  SKILLS  // -->
+            <section class="skills-section resume-section">
+                <!-- Start content edits below this line.  -->
+                <h2>Skills</h2>
+                <section class="skills-group">
+                    <a href="not_ready_yet.html"><h3> Software Design </h3></a>
+                    <a href="not_ready_yet.html"><h3> OOP </h3></a>
+                    <a href="not_ready_yet.html"><h3> Asyncio </h3></a>
+                    <a href="not_ready_yet.html"><h3> REST API </h3></a>
+                    <h3>Design Patterns</h3>
+                </section>
+                <section class="skills-group">
+                    <h3>Python</h3>
+                    <a href="not_ready_yet.html" title="Usage in projects"><h3> Numpy </h3></a>
+                    <a href="not_ready_yet.html"><h3> Pandas </h3></a>
+                    <a href="not_ready_yet.html"><h3> Seaborn </h3></a>
+                    <a href="not_ready_yet.html"><h3> Flask </h3></a>
+                    <a href="not_ready_yet.html"><h3> Pytest </h3></a>
+                    <a href="not_ready_yet.html"><h3> Allure </h3></a>
+                    <a href="not_ready_yet.html"><h3> NLTK </h3></a>
+                    <a href="not_ready_yet.html"><h3> Spacy </h3></a>
+                    <h3>pandarallel</h3>
+                    <h3>Matplotlib</h3>
+                    <h3>Jinja-2</h3>
+                    <h3>Pyspark</h3>
+                </section>
+                <section class="skills-group">
+                    <h3>Postgress</h3>
+                    <h3>Redis</h3>
+                    <h3>RabbitMQ</h3>
+                </section>
+                <section class="skills-group">
+                    <h3>CI/CD</h3>
+                    <a href="not_ready_yet.html"><h3> Git </h3></a>
+                    <a href="not_ready_yet.html"><h3> Docker </h3></a>
+                    <h3>Jenkins</h3>
+                    <h3>Kubernetes</h3>
+                    <h3>Helm</h3>
+                    <h3>Skaffold</h3>
+                </section>
+                <section class="skills-group">
+                    <a href="not_ready_yet.html"><h3> HTML </h3></a>
+                    <a href="not_ready_yet.html"><h3> CSS </h3></a>
+                    <h3>JavaScript</h3>
+                </section>
+            </section>
         </main>
 
         <!-- //  FOOTER INFO, SOCIAL MEDIA  // -->
