comment extra code.

--- a/resume.html
+++ b/resume.html
@@ -36,8 +36,8 @@
             <section class="resume-section">
                 <!-- Start content edits below this line.  -->
                 <h2>Work Experience</h2>
-                <p>Optional paragraph for work experience summary. Not a part of the job details. Delete if not being
-                    used.</p>
+<!--                <p>Optional paragraph for work experience summary. Not a part of the job details. Delete if not being-->
+<!--                    used.</p>-->
 
                 <section class="work-experience-section">
                     <div class="work-details">
@@ -69,8 +69,8 @@
                         <p>2019-2024</p>
                     </div>
                     <div class="work-summary">
-                        <p>Job summary goes here. Add as many paragraphs as you need.</p>
-                        <p>Optional list:</p>
+<!--                        <p>Job summary goes here. Add as many paragraphs as you need.</p>-->
+<!--                        <p>Optional list:</p>-->
                         <ul>
                             <li>Led the design and implementation of an architecture of performance-critical algorithms
                                 as a micro-service using REST API and messaging framework in collaboration with the QA
@@ -104,8 +104,8 @@
                         <p>2017-2019</p>
                     </div>
                     <div class="work-summary">
-                        <p>Job summary goes here. Add as many paragraphs as you need.</p>
-                        <p>Optional list:</p>
+<!--                        <p>Job summary goes here. Add as many paragraphs as you need.</p>-->
+<!--                        <p>Optional list:</p>-->
                         <ul>
                             <li>Build and train NER (Named Entity Recognition) module for PII.</li>
                             <li>Successfully acquired expertise in Natural Language Processing (NLP) through a dual
@@ -125,8 +125,8 @@
                         <p>2016-2017</p>
                     </div>
                     <div class="work-summary">
-                        <p>Job summary goes here. Add as many paragraphs as you need.</p>
-                        <p>Optional list:</p>
+<!--                        <p>Job summary goes here. Add as many paragraphs as you need.</p>-->
+<!--                        <p>Optional list:</p>-->
                         <ul>
                             <li>NOC,Monitor System and network events.</li>
                             <li>SOC,Monitor and manage security events, Threat Prevention Investigation.</li>
