update for small screens.

--- a/resume.html
+++ b/resume.html
@@ -172,6 +172,7 @@
             <section class="skills-section resume-section">
                 <!-- Start content edits below this line.  -->
                 <h2>Skills</h2>
+                <div class="skills-container">
                 <section class="skills-group">
                     <a href="not_ready_yet.html"><h3> Software Design </h3></a>
                     <a href="not_ready_yet.html"><h3> OOP </h3></a>
@@ -213,6 +214,7 @@
                     <a href="not_ready_yet.html"><h3> CSS </h3></a>
                     <h3>JavaScript</h3>
                 </section>
+                </div>
             </section>
         </main>
 
