--- a/index.html
+++ b/index.html
@@ -70,11 +70,14 @@
             <!-- Add or remove any networks. -->
             <ul class="socials">
                 <li>
-                    <a href="https://github.com/AymanElsayeed" target="_blank"><img src="images/icon-github.png" alt=""></a>
+                    <a href="https://github.com/AymanElsayeed" target="_blank">
+                        <img src="images/icon-github.png" alt="">
+                    </a>
                 </li>
                 <li>
-                    <a href="https://www.linkedin.com/in/aymanel/" target="https://www.linkedin.com/in/aymanel/"><img
-                            src="images/icon-logo-linkedin.png" alt=""></a>
+                    <a href="https://www.linkedin.com/in/aymanel/" target="_blank">
+                        <img src="images/icon-logo-linkedin.png" alt="">
+                    </a>
                 </li>
             </ul>
             <!-- End content edits here. -->
