add a pytest skill.

--- a/resume.html
+++ b/resume.html
@@ -186,7 +186,7 @@
                     <a href="not_ready_yet.html"><h3> Pandas </h3></a>
                     <a href="not_ready_yet.html"><h3> Seaborn </h3></a>
                     <a href="not_ready_yet.html"><h3> Flask </h3></a>
-                    <a href="not_ready_yet.html"><h3> Pytest </h3></a>
+                    <a href="skills/pytest.skill.html"><h3> Pytest </h3></a>
                     <a href="not_ready_yet.html"><h3> Allure </h3></a>
                     <a href="not_ready_yet.html"><h3> NLTK </h3></a>
                     <a href="not_ready_yet.html"><h3> Spacy </h3></a>
