--- a/skills/pytest.skill.html
+++ b/skills/pytest.skill.html
@@ -20,7 +20,7 @@
 
         <main class="content-wrapper grid-layout">
             <!-- //  PROJECTS  // -->
-            <section class="resume-section">
+            <section class="project-section">
                 <!-- Start content edits below this line. -->
                 <h2>Projects</h2>
                 <p></p>
@@ -28,8 +28,6 @@
                 <section class="project-item">
                     <img src="https://s.wordpress.com/mshots/v1/https://github.com/AymanElsayeed/PyTestEx?w=1280" alt="description of image" />
                     <h3>PyTestEx</h3>
-                    <p>This project is to demonstrate how to generate HTML test report and coverage report using Pytest
-                        framework.</p>
                     <!-- link to project -->
                     <a class="btn" href="https://github.com/AymanElsayeed/PyTestEx" target="_blank">Repo</a>
                 </section>
@@ -37,8 +35,6 @@
                 <section class="project-item">
                     <img src="https://s.wordpress.com/mshots/v1/https://github.com/AymanElsayeed/AllureExample?w=1280" alt="description of image" />
                     <h3>Allure Example</h3>
-                    <p>This project is to demonstrate how to generate Allure report using Pytest framework and its
-                        capabilities.</p>
                     <!-- link to project -->
                     <a class="btn" href="https://github.com/AymanElsayeed/AllureExample" target="_blank">Repo</a>
                 </section>
@@ -47,16 +43,15 @@
             </section>
 
             <!-- //  Certifications  // -->
-            <section class="resume-section">
+            <section class="certificate-section">
                 <!-- Start content edits below this line. -->
                 <h2>Certifications</h2>
                 <p></p>
 
-                <section class="project-item">
+                <section class="certificate-item">
                     <img src="../certifications/CertificateOfCompletion_Test%20Automation%20with%20Python%209%20Designing%20Your%20Test%20Suite.pdf"
                          alt="description of image">
                     <h3>Test Automation With Python </h3>
-                    <p>Test Automation with Python: 9 Designing Your Test Suite</p>
                     <!-- link to project -->
                     <a class="btn"
                        href="../certifications/CertificateOfCompletion_Test%20Automation%20with%20Python%209%20Designing%20Your%20Test%20Suite.pdf"
@@ -64,7 +59,7 @@
                 </section>
 
 
-                <section class="project-item">
+                <section class="certificate-item">
                     <img src="../certifications/CertificateOfCompletion_Test%20Automation%20Foundations.pdf"
                          alt="description of image">
                     <h3> Test Automation Foundations </h3>
@@ -73,7 +68,7 @@
                        target="_blank">Certificate</a>
                 </section>
 
-                <section class="project-item">
+                <section class="certificate-item">
                     <img src="../certifications/Introduction%20to%20Testing%20in%20Python.pdf"
                          alt="description of image">
                     <h3>Introduction to Testing in Python</h3>
