--- a/resume.html
+++ b/resume.html
@@ -205,7 +205,7 @@
                     <a href="not_ready_yet.html"><h3> Git </h3></a>
                     <a href="not_ready_yet.html"><h3> Docker </h3></a>
                     <h3>Jenkins</h3>
-                    <h3>Kubernetes</h3>
+                    <a href="skills/kubernetes.skill.html"><h3> Kubernetes </h3></a>
                     <h3>Helm</h3>
                     <h3>Skaffold</h3>
                 </section>
