--- a/skills/kubernetes.skill.html
+++ b/skills/kubernetes.skill.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <title>Ayman|Skill Name</title>
+        <title>Ayman|Kubernetes</title>
         <link rel="stylesheet" href="../css/style.css">
     </head>
     <body class="resume">
@@ -12,7 +12,7 @@
             <!-- Start content edits below this line. -->
             <div class="content-wrapper">
                 <h1>Ayman Elsayeed</h1>
-                <h2>Skill Name</h2>
+                <h2>Kubernetes</h2>
                 <a href="../resume.html">Back to Resume</a>
             </div>
             <!-- End content edits here. -->
