--- a/resume.html
+++ b/resume.html
@@ -188,8 +188,8 @@
                     <a href="not_ready_yet.html"><h3> Flask </h3></a>
                     <a href="skills/pytest.skill.html"><h3> Pytest </h3></a>
                     <a href="not_ready_yet.html"><h3> Allure </h3></a>
-                    <a href="not_ready_yet.html"><h3> NLTK </h3></a>
-                    <a href="not_ready_yet.html"><h3> Spacy </h3></a>
+                    <a href="skills/nlp.skill.html"><h3> NLTK </h3></a>
+                    <a href="skills/nlp.skill.html"><h3> Spacy </h3></a>
                     <h3>pandarallel</h3>
                     <h3>Matplotlib</h3>
                     <h3>Jinja-2</h3>
