--- a/skills/pytest.skill.html
+++ b/skills/pytest.skill.html
@@ -39,6 +39,13 @@
                     <a class="btn" href="https://github.com/AymanElsayeed/AllureExample" target="_blank">Repo</a>
                 </section>
 
+                <section class="project-item">
+                    <img src="https://s.wordpress.com/mshots/v1/https://github.com/AymanElsayeed/mocking?w=1280" alt="description of image" />
+                    <h3>Mocking</h3>
+                    <!-- link to project -->
+                    <a class="btn" href="https://github.com/AymanElsayeed/mocking" target="_blank">Repo</a>
+                </section>
+
                 <!-- End content edits here. -->
             </section>
 
