--- a/resume.html
+++ b/resume.html
@@ -187,7 +187,7 @@
                     <a href="not_ready_yet.html"><h3> Seaborn </h3></a>
                     <a href="not_ready_yet.html"><h3> Flask </h3></a>
                     <a href="skills/pytest.skill.html"><h3> Pytest </h3></a>
-                    <a href="not_ready_yet.html"><h3> Allure </h3></a>
+                    <a href="skills/pytest.skill.html"><h3> Allure </h3></a>
                     <a href="skills/nlp.skill.html"><h3> NLTK </h3></a>
                     <a href="skills/nlp.skill.html"><h3> Spacy </h3></a>
                     <h3>pandarallel</h3>
@@ -196,7 +196,7 @@
                     <h3>Pyspark</h3>
                 </section>
                 <section class="skills-group">
-                    <h3>Postgress</h3>
+                    <h3>Postgres</h3>
                     <h3>Redis</h3>
                     <h3>RabbitMQ</h3>
                 </section>
