--- a/resume.html
+++ b/resume.html
@@ -185,7 +185,7 @@
                     <a href="not_ready_yet.html" title="Usage in projects"><h3> Numpy </h3></a>
                     <a href="not_ready_yet.html"><h3> Pandas </h3></a>
                     <a href="not_ready_yet.html"><h3> Seaborn </h3></a>
-                    <a href="not_ready_yet.html"><h3> Flask </h3></a>
+                    <a href="skills/flask.skill.html"><h3> Flask </h3></a>
                     <a href="skills/pytest.skill.html"><h3> Pytest </h3></a>
                     <a href="skills/pytest.skill.html"><h3> Allure </h3></a>
                     <a href="skills/nlp.skill.html"><h3> NLTK </h3></a>
