--- a/skills/kubernetes.skill.html
+++ b/skills/kubernetes.skill.html
@@ -20,10 +20,17 @@
 
         <main class="content-wrapper grid-layout">
             <!-- //  PROJECTS  // -->
-<!--            <section class="project-section">-->
-<!--                &lt;!&ndash; Start content edits below this line. &ndash;&gt;-->
-<!--                <h2>Projects</h2>-->
-<!--                <p></p>-->
+            <section class="project-section">
+                <!-- Start content edits below this line. -->
+                <h2>Projects</h2>
+                <p></p>
+
+                <section class="project-item">
+                    <img src="https://s.wordpress.com/mshots/v1/https://github.com/AymanElsayeed/KubernetesPy?w=1280" alt="description of image"/>
+                    <h3>KubernetesPy</h3>
+                    <!-- link to project -->
+                    <a class="btn" href="https://github.com/AymanElsayeed/KubernetesPy" target="_blank">Repo</a>
+                </section>
 
 <!--                <section class="project-item">-->
 <!--                    <img src="#" alt="description of image"/>-->
@@ -32,15 +39,8 @@
 <!--                    <a class="btn" href="#" target="_blank">Repo</a>-->
 <!--                </section>-->
 
-<!--                <section class="project-item">-->
-<!--                    <img src="#" alt="description of image"/>-->
-<!--                    <h3>Project Title</h3>-->
-<!--                    &lt;!&ndash; link to project &ndash;&gt;-->
-<!--                    <a class="btn" href="#" target="_blank">Repo</a>-->
-<!--                </section>-->
-
-<!--                &lt;!&ndash; End content edits here. &ndash;&gt;-->
-<!--            </section>-->
+                <!-- End content edits here. -->
+            </section>
 
             <!-- //  Certifications  // -->
             <section class="certificate-section">
