--- a/resume.html
+++ b/resume.html
@@ -211,7 +211,7 @@
                 </section>
                 <section class="skills-group">
                     <a href="skills/html.skill.html"><h3> HTML </h3></a>
-                    <a href="not_ready_yet.html"><h3> CSS </h3></a>
+                    <a href="skills/css.skill.html"><h3> CSS </h3></a>
                     <h3>JavaScript</h3>
                 </section>
                 </div>
