--- a/resume.html
+++ b/resume.html
@@ -175,7 +175,7 @@
                 <div class="skills-container">
                 <section class="skills-group">
                     <a href="not_ready_yet.html"><h3> Software Design </h3></a>
-                    <a href="not_ready_yet.html"><h3> OOP </h3></a>
+                    <a href="skills/dp.skill.html"><h3> OOP </h3></a>
                     <a href="not_ready_yet.html"><h3> Asyncio </h3></a>
                     <a href="not_ready_yet.html"><h3> REST API </h3></a>
                     <h3>Design Patterns</h3>
