--- a/skills/dp.skill.html
+++ b/skills/dp.skill.html
@@ -83,6 +83,13 @@
                     <!-- link to project -->
                     <a class="btn" href="../certifications/LinkedIn/CertificateOfCompletion_Learning SOLID Programming Principles.pdf" target="_blank">Certificate</a>
                 </section>
+
+                <section class="certificate-item">
+                    <img src="../certifications/DataCamp/Introduction to Object-Oriented Programming in Python.pdf" alt="description of image">
+                    <h3>Introduction to Object-Oriented Programming in Python</h3>
+                    <!-- link to project -->
+                    <a class="btn" href="../certifications/DataCamp/Introduction to Object-Oriented Programming in Python.pdf" target="_blank">Certificate</a>
+                </section>
                 <!-- End content edits here. -->
             </section>
 
