add pandas skill.

--- a/resume.html
+++ b/resume.html
@@ -183,7 +183,7 @@
                 <section class="skills-group">
                     <h3>Python</h3>
                     <a href="not_ready_yet.html" title="Usage in projects"><h3> Numpy </h3></a>
-                    <a href="not_ready_yet.html"><h3> Pandas </h3></a>
+                    <a href="skills/pandas.skill.html"><h3> Pandas </h3></a>
                     <a href="not_ready_yet.html"><h3> Seaborn </h3></a>
                     <a href="skills/flask.skill.html"><h3> Flask </h3></a>
                     <a href="skills/pytest.skill.html"><h3> Pytest </h3></a>
