add python skill.

--- a/resume.html
+++ b/resume.html
@@ -181,7 +181,7 @@
                     <h3>Design Patterns</h3>
                 </section>
                 <section class="skills-group">
-                    <h3>Python</h3>
+                    <a href="skills/python.skill.html" title="Usage in projects"><h3>Python</h3></a>
                     <a href="not_ready_yet.html" title="Usage in projects"><h3> Numpy </h3></a>
                     <a href="skills/pandas.skill.html"><h3> Pandas </h3></a>
                     <a href="not_ready_yet.html"><h3> Seaborn </h3></a>
