--- a/skills/python.skill.html
+++ b/skills/python.skill.html
@@ -43,10 +43,11 @@
 <!--            </section>-->
 
             <!-- //  Certifications  // -->
-            <section class="certificate-section">
+            <h2>Certifications</h2>
+            <p></p>
+            <section class="certificate-section much-cert">
                 <!-- Start content edits below this line. -->
-                <h2>Certifications</h2>
-                <p></p>
+
 
                 <section class="certificate-item">
                     <img src="../certifications/DataCamp/Data Types in Python.pdf" alt="description of image">
