add docker skill.

--- a/resume.html
+++ b/resume.html
@@ -203,7 +203,7 @@
                 <section class="skills-group">
                     <h3>CI/CD</h3>
                     <a href="skills/git.skill.html"><h3> Git </h3></a>
-                    <a href="not_ready_yet.html"><h3> Docker </h3></a>
+                    <a href="skills/docker.skill.html"><h3> Docker </h3></a>
                     <h3>Jenkins</h3>
                     <a href="skills/kubernetes.skill.html"><h3> Kubernetes </h3></a>
                     <h3>Helm</h3>
