--- a/skills/docker.skill.html
+++ b/skills/docker.skill.html
@@ -79,7 +79,7 @@
 
                 <section class="certificate-item">
                     <img src="../certifications/LinkedIn/CertificateOfCompletion_Learning Docker 2018.pdf" alt="description of image">
-                    <h3>Learning Docker 2018.pdf</h3>
+                    <h3>Learning Docker 2018</h3>
                     <!-- link to project -->
                     <a class="btn" href="../certifications/LinkedIn/CertificateOfCompletion_Learning Docker 2018.pdf" target="_blank">Certificate</a>
                 </section>
