--- a/resume.html
+++ b/resume.html
@@ -194,6 +194,7 @@
                     <h3>Matplotlib</h3>
                     <h3>Jinja-2</h3>
                     <h3>Pyspark</h3>
+                    <a href="skills/c%23.skill.html" title="Usage in projects"><h3>C#</h3></a>
                 </section>
                 <section class="skills-group">
                     <h3>Postgres</h3>
