--- a/skills/kubernetes.skill.html
+++ b/skills/kubernetes.skill.html
@@ -63,12 +63,12 @@
                     <a class="btn" href="../certifications/Kubernetes%20Essential%20Training%20Application%20Development.pdf" target="_blank">Certificate</a>
                 </section>
 
-<!--                <section class="certificate-item">-->
-<!--                    <img src="#" alt="description of image">-->
-<!--                    <h3>Certificate Name</h3>-->
-<!--                    &lt;!&ndash; link to project &ndash;&gt;-->
-<!--                    <a class="btn" href="#" target="_blank">Certificate</a>-->
-<!--                </section>-->
+                <section class="certificate-item">
+                    <img src="../certifications/LinkedIn/CertificateOfCompletion_Kubernetes The Documentary.pdf" alt="description of image">
+                    <h3>Kubernetes The Documentary</h3>
+                    <!-- link to project -->
+                    <a class="btn" href="../certifications/LinkedIn/CertificateOfCompletion_Kubernetes The Documentary.pdf" target="_blank">Certificate</a>
+                </section>
 
                 <!-- End content edits here. -->
             </section>
