--- a/skills/kubernetes.skill.html
+++ b/skills/kubernetes.skill.html
@@ -69,6 +69,36 @@
                     <!-- link to project -->
                     <a class="btn" href="../certifications/LinkedIn/CertificateOfCompletion_Kubernetes The Documentary.pdf" target="_blank">Certificate</a>
                 </section>
+                <section class="certificate-item">
+                    <img src="../certifications/LinkedIn/CertificateOfCompletion_Kubernetes Cloud Native Ecosystem.pdf" alt="description of image">
+                    <h3>Kubernetes Cloud Native Ecosystem</h3>
+                    <!-- link to project -->
+                    <a class="btn" href="../certifications/LinkedIn/CertificateOfCompletion_Kubernetes Cloud Native Ecosystem.pdf" target="_blank">Certificate</a>
+                </section>
+                <section class="certificate-item">
+                    <img src="../certifications/LinkedIn/CertificateOfCompletion_Kubernetes Service Mesh with Istio.pdf" alt="description of image">
+                    <h3>Kubernetes Service Mesh with Istio</h3>
+                    <!-- link to project -->
+                    <a class="btn" href="../certifications/LinkedIn/CertificateOfCompletion_Kubernetes Service Mesh with Istio.pdf" target="_blank">Certificate</a>
+                </section>
+                <section class="certificate-item">
+                    <img src="../certifications/LinkedIn/CertificateOfCompletion_Kubernetes Package Management with Helm.pdf" alt="description of image">
+                    <h3>Kubernetes Package Management with Helm</h3>
+                    <!-- link to project -->
+                    <a class="btn" href="../certifications/LinkedIn/CertificateOfCompletion_Kubernetes Package Management with Helm.pdf" target="_blank">Certificate</a>
+                </section>
+                <section class="certificate-item">
+                    <img src="../certifications/LinkedIn/CertificateOfCompletion_Kubernetes Microservices 2018.pdf" alt="description of image">
+                    <h3>Kubernetes Microservices</h3>
+                    <!-- link to project -->
+                    <a class="btn" href="../certifications/LinkedIn/CertificateOfCompletion_Kubernetes Microservices 2018.pdf" target="_blank">Certificate</a>
+                </section>
+                <section class="certificate-item">
+                    <img src="../certifications/LinkedIn/CertificateOfCompletion_Kubernetes Monitoring with Prometheus 2018.pdf" alt="description of image">
+                    <h3>Kubernetes Monitoring with Prometheus</h3>
+                    <!-- link to project -->
+                    <a class="btn" href="../certifications/LinkedIn/CertificateOfCompletion_Kubernetes Monitoring with Prometheus 2018.pdf" target="_blank">Certificate</a>
+                </section>
 
                 <!-- End content edits here. -->
             </section>
