--- a/skills/kubernetes.skill.html
+++ b/skills/kubernetes.skill.html
@@ -18,86 +18,78 @@
             <!-- End content edits here. -->
         </header>
 
-        <main class="content-wrapper grid-layout">
-            <!-- //  PROJECTS  // -->
-            <section class="project-section">
-                <!-- Start content edits below this line. -->
-                <h2>Projects</h2>
-                <p></p>
-
-                <section class="project-item">
-                    <img src="https://s.wordpress.com/mshots/v1/https://github.com/AymanElsayeed/KubernetesPy?w=1280" alt="description of image"/>
-                    <h3>KubernetesPy</h3>
-                    <!-- link to project -->
-                    <a class="btn" href="https://github.com/AymanElsayeed/KubernetesPy" target="_blank">Repo</a>
-                </section>
-
-<!--                <section class="project-item">-->
-<!--                    <img src="#" alt="description of image"/>-->
-<!--                    <h3>Project Title</h3>-->
-<!--                    &lt;!&ndash; link to project &ndash;&gt;-->
-<!--                    <a class="btn" href="#" target="_blank">Repo</a>-->
-<!--                </section>-->
-
-                <!-- End content edits here. -->
-            </section>
+        <main class="content-wrapper">
 
             <!-- //  Certifications  // -->
-            <section class="certificate-section">
+            <h2>Certifications</h2>
+            <p></p>
+            <section class="certificate-section much-cert">
                 <!-- Start content edits below this line. -->
-                <h2>Certifications</h2>
-                <p></p>
-
-                <section class="certificate-item">
+                <div class="certificate-item">
                     <img src="../certifications/Master%20CloudNative%20Infrastructure%20with%20Kubernetes.pdf" alt="description of image">
-                    <h3>Master CloudNative Infrastructure with Kubernetes</h3>
+                    <p>Master CloudNative Infrastructure with Kubernetes</p>
                     <!-- link to project -->
                     <a class="btn" href="../certifications/Master%20CloudNative%20Infrastructure%20with%20Kubernetes.pdf" target="_blank">Certificate</a>
-                </section>
+                </div>
 
 
                 <section class="certificate-item">
                     <img src="../certifications/Kubernetes%20Essential%20Training%20Application%20Development.pdf" alt="description of image">
-                    <h3>Kubernetes Essential Training Application Development</h3>
+                    <p>Kubernetes Essential Training Application Development</p>
                     <!-- link to project -->
                     <a class="btn" href="../certifications/Kubernetes%20Essential%20Training%20Application%20Development.pdf" target="_blank">Certificate</a>
                 </section>
 
                 <section class="certificate-item">
                     <img src="../certifications/LinkedIn/CertificateOfCompletion_Kubernetes The Documentary.pdf" alt="description of image">
-                    <h3>Kubernetes The Documentary</h3>
+                    <p>Kubernetes The Documentary</p>
                     <!-- link to project -->
                     <a class="btn" href="../certifications/LinkedIn/CertificateOfCompletion_Kubernetes The Documentary.pdf" target="_blank">Certificate</a>
                 </section>
                 <section class="certificate-item">
                     <img src="../certifications/LinkedIn/CertificateOfCompletion_Kubernetes Cloud Native Ecosystem.pdf" alt="description of image">
-                    <h3>Kubernetes Cloud Native Ecosystem</h3>
+                    <p>Kubernetes Cloud Native Ecosystem</p>
                     <!-- link to project -->
                     <a class="btn" href="../certifications/LinkedIn/CertificateOfCompletion_Kubernetes Cloud Native Ecosystem.pdf" target="_blank">Certificate</a>
                 </section>
                 <section class="certificate-item">
                     <img src="../certifications/LinkedIn/CertificateOfCompletion_Kubernetes Service Mesh with Istio.pdf" alt="description of image">
-                    <h3>Kubernetes Service Mesh with Istio</h3>
+                    <p>Kubernetes Service Mesh with Istio</p>
                     <!-- link to project -->
                     <a class="btn" href="../certifications/LinkedIn/CertificateOfCompletion_Kubernetes Service Mesh with Istio.pdf" target="_blank">Certificate</a>
                 </section>
                 <section class="certificate-item">
                     <img src="../certifications/LinkedIn/CertificateOfCompletion_Kubernetes Package Management with Helm.pdf" alt="description of image">
-                    <h3>Kubernetes Package Management with Helm</h3>
+                    <p>Kubernetes Package Management with Helm</p>
                     <!-- link to project -->
                     <a class="btn" href="../certifications/LinkedIn/CertificateOfCompletion_Kubernetes Package Management with Helm.pdf" target="_blank">Certificate</a>
                 </section>
                 <section class="certificate-item">
                     <img src="../certifications/LinkedIn/CertificateOfCompletion_Kubernetes Microservices 2018.pdf" alt="description of image">
-                    <h3>Kubernetes Microservices</h3>
+                    <p>Kubernetes Microservices</p>
                     <!-- link to project -->
                     <a class="btn" href="../certifications/LinkedIn/CertificateOfCompletion_Kubernetes Microservices 2018.pdf" target="_blank">Certificate</a>
                 </section>
                 <section class="certificate-item">
                     <img src="../certifications/LinkedIn/CertificateOfCompletion_Kubernetes Monitoring with Prometheus 2018.pdf" alt="description of image">
-                    <h3>Kubernetes Monitoring with Prometheus</h3>
+                    <p>Kubernetes Monitoring with Prometheus</p>
                     <!-- link to project -->
                     <a class="btn" href="../certifications/LinkedIn/CertificateOfCompletion_Kubernetes Monitoring with Prometheus 2018.pdf" target="_blank">Certificate</a>
+                </section>
+
+                <!-- End content edits here. -->
+            </section>
+
+            <!-- //  PROJECTS  // -->
+            <h2>Projects</h2>
+            <p></p>
+            <section class="project-section much-cert">
+                <!-- Start content edits below this line. -->
+                <section class="project-item">
+                    <img src="https://s.wordpress.com/mshots/v1/https://github.com/AymanElsayeed/KubernetesPy?w=1280" alt="description of image"/>
+                    <h3>KubernetesPy</h3>
+                    <!-- link to project -->
+                    <a class="btn" href="https://github.com/AymanElsayeed/KubernetesPy" target="_blank">Repo</a>
                 </section>
 
                 <!-- End content edits here. -->
