--- a/skills/python.skill.html
+++ b/skills/python.skill.html
@@ -130,6 +130,27 @@
                     <a class="btn" href="../certifications/LinkedIn/CertificateOfCompletion_Python Data Structures and Algorithms.pdf" target="_blank">Certificate</a>
                 </section>
 
+                <section class="certificate-item">
+                    <img src="../certifications/LinkedIn/CertificateOfCompletion_Advanced Python.pdf" alt="description of image">
+                    <h3>Advanced Python</h3>
+                    <!-- link to project -->
+                    <a class="btn" href="../certifications/LinkedIn/CertificateOfCompletion_Advanced Python.pdf" target="_blank">Certificate</a>
+                </section>
+
+                <section class="certificate-item">
+                    <img src="../certifications/LinkedIn/CertificateOfCompletion_Learning Python.pdf" alt="description of image">
+                    <h3>Learning Python</h3>
+                    <!-- link to project -->
+                    <a class="btn" href="../certifications/LinkedIn/CertificateOfCompletion_Learning Python.pdf" target="_blank">Certificate</a>
+                </section>
+
+                <section class="certificate-item">
+                    <img src="../certifications/LinkedIn/CertificateOfCompletion_Python Standard Library Essential Training.pdf" alt="description of image">
+                    <h3>Python Standard Library Essential Training</h3>
+                    <!-- link to project -->
+                    <a class="btn" href="../certifications/LinkedIn/CertificateOfCompletion_Python Standard Library Essential Training.pdf" target="_blank">Certificate</a>
+                </section>
+
                 <!-- End content edits here. -->
             </section>
 
