--- a/resume.html
+++ b/resume.html
@@ -184,14 +184,14 @@
                     <a href="skills/python.skill.html" title="Usage in projects"><h3>Python</h3></a>
                     <a href="not_ready_yet.html" title="Usage in projects"><h3> Numpy </h3></a>
                     <a href="skills/pandas.skill.html"><h3> Pandas </h3></a>
-                    <a href="not_ready_yet.html"><h3> Seaborn </h3></a>
+                    <a href="skills/DataVisualization.skill.html"><h3> Seaborn </h3></a>
+                    <a href="skills/DataVisualization.skill.html"><h3> Matplotlib </h3></a>
                     <a href="skills/flask.skill.html"><h3> Flask </h3></a>
                     <a href="skills/pytest.skill.html"><h3> Pytest </h3></a>
                     <a href="skills/pytest.skill.html"><h3> Allure </h3></a>
                     <a href="skills/nlp.skill.html"><h3> NLTK </h3></a>
                     <a href="skills/nlp.skill.html"><h3> Spacy </h3></a>
                     <h3>pandarallel</h3>
-                    <h3>Matplotlib</h3>
                     <h3>Jinja-2</h3>
                     <a href="skills/spark.skill.html"><h3> Pyspark </h3></a>
                     <a href="skills/c%23.skill.html" title="Usage in projects"><h3>C#</h3></a>
